# app-backend

./: .gitignore  README.md  api-version.json  pyproject.toml
docs/: release-notes-1.8.0.md
openapi/: admin-swagger.json  openapi.yaml
src/app/: main.py
src/app/routes/: __init__.py  admin.py  invoices.py  orders.py  profiles.py  search.py  sessions.py  users.py
