[project]
name = "app-backend"
version = "1.8.0"
description = "Mock API backend for contract drift validation"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "starlette==0.47.1",
  "uvicorn==0.35.0"
]

[tool.app_backend]
api_version = "v1"
openapi_public = "openapi/openapi.yaml"
openapi_admin = "openapi/admin-swagger.json"

